# auth_service

./: .env.example  README.md  pyproject.toml
app/: main.py
app/application/: dtos.py
app/application/interfaces/: user_repository.py
app/application/use_cases/: authenticate_user.py  register_user.py
app/core/: config.py
app/domain/: exceptions.py  models.py  services.py
app/infrastructure/database/: models.py  repositories.py
app/infrastructure/security/: jwt_handler.py
app/presentation/api/: deps.py
app/presentation/api/v1/: router.py
app/presentation/api/v1/endpoints/: auth.py
